--- a/environment.yml
+++ b/environment.yml
@@ -5,7 +5,7 @@ channels:
   - ostrokach-forge
   - pkgw-forge
 dependencies:
-  - python=3.6
+  - python
   - pygobject
   - matplotlib
   - scikit-learn
