--- a/environment.yml
+++ b/environment.yml
@@ -11,7 +11,8 @@ dependencies:
   - cgal 
   - sparsehash 
   - boost
-  - python
+  - openssl=1.1.1
+  - python=3.6
   - cairo
   - libsigcpp 
   - cairomm  
@@ -27,6 +28,5 @@ dependencies:
   - pandas
   - graphviz 
   - pygobject
-  - openssl 
   - gtk3
   - graph-tool=2.27
