--- a/environment.yml
+++ b/environment.yml
@@ -8,25 +8,23 @@ channels:
   - psi4
   - numba
 dependencies:
-  - cgal 
-  - sparsehash 
+  - cgal=4.12
+  - dbus=1.13.2
+  - sparsehash=2.0.3
   - boost=1.66
-  - openssl=1.1.1
+  - pyopenssl=19.0.0
   - python=3.6
-  - cairo
-  - libsigcpp 
-  - cairomm  
-  - expat 
-  - pycairo
-  - numba 
-  - py-boost 
-  - matplotlib
-  - scikit-learn
-  - numpy
-  - scipy
-  - setuptools 
-  - pandas
-  - graphviz 
-  - pygobject
-  - gtk3
+  - cairo=1.14.12
+  - libsigcpp=2.10.0
+  - cairomm=1.12.2  
+  - expat=2.2.6
+  - pycairo=1.13.3
+  - matplotlib=2.2.2
+  - scikit-learn=0.22
+  - numpy=1.17.4
+  - scipy=1.3.2
+  - setuptools=41.2.0
+  - pandas=0.25.3
+  - pygobject=3.28.2
+  - gtk3=3.22
   - graph-tool=2.27
