--- a/environment.yml
+++ b/environment.yml
@@ -4,16 +4,16 @@ channels:
   - conda-forge
   - ostrokach-forge
   - pkgw-forge
-  - anaconda
-  - psi4
-  - numba
-dependencies:
-  - cgal=4.12
-  - dbus=1.13.2
-  - sparsehash=2.0.3
-  - boost=1.66
-  - pyopenssl=19.0.0
+dependencies:  
   - python=3.6
+  - pygobject=3.28.2
+  - matplotlib=2.2.2
+  - scikit-learn=0.22
+  - numpy=1.17.4
+  - scipy=1.3.2
+  - pandas=0.25.3
+  - networkx=2.2
   - graph-tool=2.27
-  
-
+  - cairo>=1.14
+  #  - cairomm>=1.13
+  - pycairo=1.13.3
