--- a/environment.yml
+++ b/environment.yml
@@ -1,18 +1,11 @@
-name: entroduction_graph_tool_env
+name: introduction_graph_tool_env
 channels:
-  - defaults
   - conda-forge
-  - ostrokach-forge
-  - pkgw-forge
-dependencies:  
-  - python=3.6
-  - pygobject=3.28.2
-  - matplotlib=2.2.2
-  - scikit-learn=0.22
-  - numpy=1.17.4
-  - scipy=1.3.2
-  - pandas=0.25.3
-  - networkx=2.2
-  - cairo>=1.14
-  #  - cairomm>=1.13
-  - pycairo=1.13.3
+dependencies:
+  - graph-tool=2.37
+  - pandas
+  - networkx=2.5
+  - scikit-learn
+  - pip:
+    - powerlaw
+    - python-louvain 
