--- a/environment.yml
+++ b/environment.yml
@@ -6,6 +6,31 @@ dependencies:
   - pandas
   - networkx=2.5
   - scikit-learn
+  - tslearn=0.1.19.2
+  - seaborn
+  - matplotlib
+  - scipy 
+  - numpy
+  - requests
+  - ratelimiter
+  - python-oauth2
+  - pymongo
+  - pycairo
+  - oauthlib
+  - nltk
+  - googlemaps
+  - future
   - pip:
     - powerlaw
     - python-louvain 
+    - pip:
+    - area==1.1.1
+    - bctpy==0.5.0
+    - geographiclib==1.50
+    - geopy==1.21.0
+    - infomap==1.0.6
+    - pandarallel==1.5.1
+    - pip==20.3.4
+    - powerlaw==1.4.6
+    - ratelimit==2.2.1
+    - statsmodels==0.10.0rc2
